# deep-nlp

./: .gitignore  CLAUDE.md  README.md  app.py  nlp-financial-news-sentiment-analysis.ipynb  presentation.tex  pyproject.toml  rapport.tex  requirements.txt  run.bat  setup.bat  streamlit_app.py
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_lstm.ipynb  04_finbert.ipynb
presentation/: presentation.tex  sentiment_analysis_slides (5).pptx
rapport/: rapport.tex
results/: leaderboard.csv  leaderboard.json  leaderboard.md
scripts/: build_leaderboard.py  train_baselines.py  train_lstm.py  train_transformer.py
src/: __init__.py  config.py  data.py  inference.py  metrics.py
