[project]
name = "financial-sentiment-analysis"
version = "0.2.0"
description = "Financial News Sentiment Analysis — FinancialPhraseBank benchmarks with classical ML, deep learning, and transformer models"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "gradio>=6.11.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "lime>=0.2.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "streamlit-javascript>=0.1.5",
    "tabulate>=0.9.0",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "torchvision>=0.22.0",
    "transformers>=5.5.0",
    "wordcloud>=1.9.6",
    "yfinance>=0.2.40",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
